--- a/index.html
+++ b/index.html
@@ -33,13 +33,7 @@
       </div>
 
       <div id="scoreboard" class="section">
-        <ol>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
-        </ol>
+        <ol id='lives'></ol>
       </div>
     </div>
     <script type="text/javascript" src="js/app.js"></script>
